feature whatsapp icon and
disable notice in php.ini

fix database

--- a/php.ini
+++ b/php.ini
@@ -18,3 +18,5 @@ session.save_path = "/var/cpanel/php/sessions/ea-php73"
 upload_max_filesize = 1000M
 zlib.output_compression = Off
 upload_tmp_dir = "/home/cp41534/public_html/blog/wp-content/temp/"
+error_reporting = E_ALL & ~E_NOTICE
+
